--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-codec-1.9.jar=D:\\Project\\lib\\new\\commons-codec-1.9.ja
 file.reference.commons-codec-1.9.jar-1=lib\\commons-codec-1.9.jar
 file.reference.commons-logging-1.2.jar=D:\\Project\\lib\\new\\commons-logging-1.2.jar
 file.reference.commons-logging-1.2.jar-1=lib\\commons-logging-1.2.jar
+file.reference.gson-2.8.5.jar=D:\\Project\\lib\\new\\gson-2.8.5.jar
 file.reference.httpasyncclient-4.1.1.jar=D:\\Project\\lib\\new\\httpasyncclient-4.1.1.jar
 file.reference.httpasyncclient-4.1.1.jar-1=lib\\httpasyncclient-4.1.1.jar
 file.reference.httpclient-4.5.2.jar=D:\\Project\\lib\\new\\httpclient-4.5.2.jar
@@ -73,7 +74,8 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.2.jar-1}:\
     ${file.reference.json-20160212.jar-1}:\
     ${file.reference.unirest-java-1.4.9.jar-1}:\
-    ${file.reference.PlaceHolder.jar}
+    ${file.reference.PlaceHolder.jar}:\
+    ${file.reference.gson-2.8.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
