--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.commons-codec-1.9.jar=D:\\Project\\lib\\new\\commons-codec-1.9.ja
 file.reference.commons-codec-1.9.jar-1=lib\\commons-codec-1.9.jar
 file.reference.commons-logging-1.2.jar=D:\\Project\\lib\\new\\commons-logging-1.2.jar
 file.reference.commons-logging-1.2.jar-1=lib\\commons-logging-1.2.jar
+file.reference.engine.io-client-1.0.0.jar=D:\\Project\\lib\\socket\\engine.io-client-1.0.0.jar
 file.reference.gson-2.8.5.jar=D:\\Project\\lib\\new\\gson-2.8.5.jar
 file.reference.httpasyncclient-4.1.1.jar=D:\\Project\\lib\\new\\httpasyncclient-4.1.1.jar
 file.reference.httpasyncclient-4.1.1.jar-1=lib\\httpasyncclient-4.1.1.jar
@@ -48,7 +49,10 @@ file.reference.json-20160212.jar=D:\\Project\\lib\\new\\json-20160212.jar
 file.reference.json-20160212.jar-1=lib\\json-20160212.jar
 file.reference.json.jar=..\\OX\\json.jar
 file.reference.json.jar-1=C:\\Users\\FRAME\\Desktop\\json.jar
+file.reference.okhttp-3.8.1.jar=D:\\Project\\lib\\socket\\okhttp-3.8.1.jar
+file.reference.okio-1.13.0.jar=D:\\Project\\lib\\socket\\okio-1.13.0.jar
 file.reference.PlaceHolder.jar=lib\\PlaceHolder.jar
+file.reference.socket.io-client-1.0.0.jar=D:\\Project\\lib\\socket\\socket.io-client-1.0.0.jar
 file.reference.unirest-java-1.4.9.jar=D:\\Project\\lib\\new\\unirest-java-1.4.9.jar
 file.reference.unirest-java-1.4.9.jar-1=lib\\unirest-java-1.4.9.jar
 includes=**
@@ -75,7 +79,11 @@ javac.classpath=\
     ${file.reference.json-20160212.jar-1}:\
     ${file.reference.unirest-java-1.4.9.jar-1}:\
     ${file.reference.PlaceHolder.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.engine.io-client-1.0.0.jar}:\
+    ${file.reference.okhttp-3.8.1.jar}:\
+    ${file.reference.okio-1.13.0.jar}:\
+    ${file.reference.socket.io-client-1.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
