--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,61 +29,39 @@ dist.jar=${dist.dir}/OX_Group.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.9.jar=D:\\Project\\lib\\new\\commons-codec-1.9.jar
-file.reference.commons-codec-1.9.jar-1=lib\\commons-codec-1.9.jar
-file.reference.commons-logging-1.2.jar=D:\\Project\\lib\\new\\commons-logging-1.2.jar
-file.reference.commons-logging-1.2.jar-1=lib\\commons-logging-1.2.jar
-file.reference.engine.io-client-1.0.0.jar=D:\\Project\\lib\\socket\\engine.io-client-1.0.0.jar
-file.reference.gson-2.8.5.jar=D:\\Project\\lib\\new\\gson-2.8.5.jar
-file.reference.httpasyncclient-4.1.1.jar=D:\\Project\\lib\\new\\httpasyncclient-4.1.1.jar
-file.reference.httpasyncclient-4.1.1.jar-1=lib\\httpasyncclient-4.1.1.jar
-file.reference.httpclient-4.5.2.jar=D:\\Project\\lib\\new\\httpclient-4.5.2.jar
-file.reference.httpclient-4.5.2.jar-1=lib\\httpclient-4.5.2.jar
-file.reference.httpcore-4.4.4.jar=D:\\Project\\lib\\new\\httpcore-4.4.4.jar
-file.reference.httpcore-4.4.4.jar-1=lib\\httpcore-4.4.4.jar
-file.reference.httpcore-nio-4.4.4.jar=D:\\Project\\lib\\new\\httpcore-nio-4.4.4.jar
-file.reference.httpcore-nio-4.4.4.jar-1=lib\\httpcore-nio-4.4.4.jar
-file.reference.httpmime-4.5.2.jar=D:\\Project\\lib\\new\\httpmime-4.5.2.jar
-file.reference.httpmime-4.5.2.jar-1=lib\\httpmime-4.5.2.jar
-file.reference.json-20160212.jar=D:\\Project\\lib\\new\\json-20160212.jar
-file.reference.json-20160212.jar-1=lib\\json-20160212.jar
-file.reference.json.jar=..\\OX\\json.jar
-file.reference.json.jar-1=C:\\Users\\FRAME\\Desktop\\json.jar
-file.reference.okhttp-3.8.1.jar=D:\\Project\\lib\\socket\\okhttp-3.8.1.jar
-file.reference.okio-1.13.0.jar=D:\\Project\\lib\\socket\\okio-1.13.0.jar
-file.reference.PlaceHolder.jar=lib\\PlaceHolder.jar
-file.reference.socket.io-client-1.0.0.jar=D:\\Project\\lib\\socket\\socket.io-client-1.0.0.jar
-file.reference.unirest-java-1.4.9.jar=D:\\Project\\lib\\new\\unirest-java-1.4.9.jar
-file.reference.unirest-java-1.4.9.jar-1=lib\\unirest-java-1.4.9.jar
+file.reference.commons-codec-1.9.jar=lib/commons-codec-1.9.jar
+file.reference.commons-logging-1.2.jar=lib/commons-logging-1.2.jar
+file.reference.engine.io-client-1.0.0.jar=lib/engine.io-client-1.0.0.jar
+file.reference.gson-2.8.5.jar=lib/gson-2.8.5.jar
+file.reference.httpasyncclient-4.1.1.jar=lib/httpasyncclient-4.1.1.jar
+file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
+file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
+file.reference.httpcore-nio-4.4.4.jar=lib/httpcore-nio-4.4.4.jar
+file.reference.httpmime-4.5.2.jar=lib/httpmime-4.5.2.jar
+file.reference.json-20160212.jar=lib/json-20160212.jar
+file.reference.okhttp-3.8.1.jar=lib/okhttp-3.8.1.jar
+file.reference.okio-1.13.0.jar=lib/okio-1.13.0.jar
+file.reference.PlaceHolder.jar=lib/PlaceHolder.jar
+file.reference.socket.io-client-1.0.0.jar=lib/socket.io-client-1.0.0.jar
+file.reference.unirest-java-1.4.9.jar=lib/unirest-java-1.4.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json.jar}:\
-    ${file.reference.json.jar-1}:\
+    ${file.reference.PlaceHolder.jar}:\
     ${file.reference.commons-codec-1.9.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.engine.io-client-1.0.0.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.httpasyncclient-4.1.1.jar}:\
     ${file.reference.httpclient-4.5.2.jar}:\
     ${file.reference.httpcore-4.4.4.jar}:\
     ${file.reference.httpcore-nio-4.4.4.jar}:\
     ${file.reference.httpmime-4.5.2.jar}:\
     ${file.reference.json-20160212.jar}:\
-    ${file.reference.unirest-java-1.4.9.jar}:\
-    ${file.reference.commons-codec-1.9.jar-1}:\
-    ${file.reference.commons-logging-1.2.jar-1}:\
-    ${file.reference.httpasyncclient-4.1.1.jar-1}:\
-    ${file.reference.httpclient-4.5.2.jar-1}:\
-    ${file.reference.httpcore-4.4.4.jar-1}:\
-    ${file.reference.httpcore-nio-4.4.4.jar-1}:\
-    ${file.reference.httpmime-4.5.2.jar-1}:\
-    ${file.reference.json-20160212.jar-1}:\
-    ${file.reference.unirest-java-1.4.9.jar-1}:\
-    ${file.reference.PlaceHolder.jar}:\
-    ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.engine.io-client-1.0.0.jar}:\
     ${file.reference.okhttp-3.8.1.jar}:\
     ${file.reference.okio-1.13.0.jar}:\
-    ${file.reference.socket.io-client-1.0.0.jar}
+    ${file.reference.socket.io-client-1.0.0.jar}:\
+    ${file.reference.unirest-java-1.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -125,4 +103,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.lib.dir=lib
 test.src.dir=test
