--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,9 @@ file.reference.httpclient-4.5.2.jar=lib/httpclient-4.5.2.jar
 file.reference.httpcore-4.4.4.jar=lib/httpcore-4.4.4.jar
 file.reference.httpcore-nio-4.4.4.jar=lib/httpcore-nio-4.4.4.jar
 file.reference.httpmime-4.5.2.jar=lib/httpmime-4.5.2.jar
+file.reference.jackson-annotations-2.9.0.jar=lib/jackson-annotations-2.9.0.jar
+file.reference.jackson-core-2.9.7.jar=lib/jackson-core-2.9.7.jar
+file.reference.jackson-databind-2.9.7.jar=lib/jackson-databind-2.9.7.jar
 file.reference.json-20160212.jar=lib/json-20160212.jar
 file.reference.okhttp-3.8.1.jar=lib/okhttp-3.8.1.jar
 file.reference.okio-1.13.0.jar=lib/okio-1.13.0.jar
@@ -61,7 +64,11 @@ javac.classpath=\
     ${file.reference.okhttp-3.8.1.jar}:\
     ${file.reference.okio-1.13.0.jar}:\
     ${file.reference.socket.io-client-1.0.0.jar}:\
-    ${file.reference.unirest-java-1.4.9.jar}
+    ${file.reference.unirest-java-1.4.9.jar}:\
+    ${file.reference.jackson-annotations-2.9.0.jar}:\
+    ${file.reference.jackson-core-2.9.7.jar}:\
+    ${file.reference.jackson-databind-2.9.7.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -103,5 +110,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-src.lib.dir=lib
 test.src.dir=test
