edit Class name

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -93,7 +93,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=page.fromLogin
+main.class=page.FormLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
